k8s/ingress/nginx-service-v2.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose --file docker-compose-deploy.yml convert
    kompose.version: 1.35.0 (HEAD)
  labels:
    io.kompose.service: nginx
  name: nginxv2
spec:
  type: LoadBalancer
  ports:
    - name: "8000"
      port: 8000
      targetPort: 80
  selector:
    io.kompose.service: nginx
